--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.white-block {
+  position: absolute;
+  height: 40px;
+  width: 60%;
+  background-color: #fff;
+}
+
 *,
 *::after,
 *::before {
