--- a/css/main.css
+++ b/css/main.css
@@ -118,4 +118,8 @@ body {
   height: 75vh;
   text-align: center;
   color: #fff;
+  background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/header-mini.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }/*# sourceMappingURL=main.css.map */
