background-attachment: scroll to header added

--- a/css/main.css
+++ b/css/main.css
@@ -122,4 +122,5 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-attachment: scroll;
 }/*# sourceMappingURL=main.css.map */
