--- a/css/main.css
+++ b/css/main.css
@@ -123,4 +123,9 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-attachment: scroll;
+}
+.header__heading {
+  font-family: "Dancing Script", cursive;
+  font-size: 4.8rem;
+  font-weight: 300;
 }/*# sourceMappingURL=main.css.map */
