text in header styled

--- a/css/main.css
+++ b/css/main.css
@@ -128,4 +128,7 @@ body {
   font-family: "Dancing Script", cursive;
   font-size: 4.8rem;
   font-weight: 300;
+}
+.header__text {
+  font-size: 1.4rem;
 }/*# sourceMappingURL=main.css.map */
