button in header styled

--- a/css/main.css
+++ b/css/main.css
@@ -131,4 +131,19 @@ body {
 }
 .header__text {
   font-size: 1.4rem;
+}
+.header__btn {
+  margin-top: 2em;
+  padding: 0.8em 1.6em;
+  font-size: 1.4rem;
+  background: #fff;
+  border: none;
+  border-radius: 8px;
+  color: #2e2e2e;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.header__btn::before {
+  background-color: #eee;
 }/*# sourceMappingURL=main.css.map */
