--- a/sass/main.scss
+++ b/sass/main.scss
@@ -95,4 +95,21 @@ body {
 	&__text {
 		font-size: 1.4rem;
 	}
+
+	&__btn {
+		margin-top: 2em;
+		padding: 0.8em 1.6em;
+		font-size: 1.4rem;
+		background: $pure-white;
+		border: none;
+		border-radius: 8px;
+		color: $dark;
+		text-decoration: none;
+		text-transform: uppercase;
+		cursor: pointer;
+
+		&::before {
+			background-color: $light-white;
+		}
+	}
 }
