white-block & header for breakpoint 768px styled

--- a/css/main.css
+++ b/css/main.css
@@ -146,4 +146,20 @@ body {
 }
 .header__btn::before {
   background-color: #eee;
+}
+
+@media (min-width: 768px) {
+  .white-block {
+    height: 50px;
+    width: 45%;
+  }
+  .header__heading {
+    font-size: 6.6rem;
+  }
+  .header__text {
+    font-size: 2.2rem;
+  }
+  .header__btn {
+    font-size: 1.6rem;
+  }
 }/*# sourceMappingURL=main.css.map */
