--- a/sass/main.scss
+++ b/sass/main.scss
@@ -113,3 +113,25 @@ body {
 		}
 	}
 }
+
+// MEDIA
+@media (min-width: 768px) {
+	.white-block {
+		height: 50px;
+		width: 45%;
+	}
+
+	.header {
+		&__heading {
+			font-size: 6.6rem;
+		}
+
+		&__text {
+			font-size: 2.2rem;
+		}
+
+		&__btn {
+			font-size: 1.6rem;
+		}
+	}
+}
