burger-btn & header for breakpoint 992px styled

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -135,3 +135,18 @@ body {
 		}
 	}
 }
+
+@media (min-width: 992px) {
+	.burger-btn {
+		top: 50px;
+		right: 50px;
+	}
+
+	.header {
+		background-image: $blue-gradient, url('../img/header-max.jpg');
+
+		&__heading {
+			font-size: 10rem;
+		}
+	}
+}
