--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,6 +91,22 @@ body {
 		font-size: 2.8rem;
 		color: $pure-white;
 		text-decoration: none;
+
+		&::before {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 3px;
+			height: 100%;
+			transform: scaleY(0);
+			background-color: $pure-white;
+			transition: transform 0.3s;
+			content: '';
+		}
+
+		&:hover::before {
+			transform: scaleY(1);
+		}
 	}
 }
 
