--- a/sass/main.scss
+++ b/sass/main.scss
@@ -360,6 +360,8 @@ body {
 
 		&-info {
 			padding: 2em;
+			background-color: $pure-white;
+			z-index: 10;
 		}
 
 		&-heading {
@@ -418,6 +420,39 @@ body {
 		&__img {
 			margin-bottom: 0;
 			min-height: 300px;
+		}
+	}
+
+	.offers {
+		&__option {
+			display: flex;
+			margin: 2em 0;
+			width: 100%;
+
+			&-img {
+				width: 50%;
+				height: auto;
+
+				&--right {
+					order: 1;
+				}
+			}
+
+			&-info {
+				display: flex;
+				width: 50%;
+				flex-direction: column;
+				justify-content: space-between;
+			}
+
+			&-heading {
+				margin-bottom: 0.5em;
+				font-size: 3.6rem;
+			}
+
+			&-btn {
+				padding: 1em;
+			}
 		}
 	}
 }
@@ -527,6 +562,21 @@ body {
 		hr {
 			width: 60%;
 			max-width: 900px;
+		}
+	}
+
+	.offers {
+		background-image: $blue-gradient, url('../img/offer-max.jpg');
+
+		&__option {
+			&-img {
+				object-fit: cover;
+				height: 300px;
+			}
+
+			&-text {
+				font-size: 1.5rem;
+			}
 		}
 	}
 }
