--- a/sass/main.scss
+++ b/sass/main.scss
@@ -130,6 +130,12 @@ body {
 	animation: navItemsAnimation 1s both;
 }
 
+.black-bars-color,
+.black-bars-color::after,
+.black-bars-color::before {
+	background-color: $dark;
+}
+
 //HEADER
 .header {
 	position: relative;
